--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </tr>
   </table>
   <hr size="4" NOSHADE>
-  <a href="C:\Users\ADMIN\Desktop\aanch web\hobbies.html"><b>MY HOBBIES</b></a>
-  <p>YOU CAN CONTACT ME <a href="C:\Users\ADMIN\Desktop\aanch web\html-personal site\contactme.html">HERE</a></p>
+  <a href="hobbies.html"><b>MY HOBBIES</b></a>
+  <p>YOU CAN CONTACT ME <a href="contactme.html">HERE</a></p>
 </body>
 
 </html>
